--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-*.py[co]
+.DS_Store
+
+*.py[cod]
 *.cfg
 *.log
 
@@ -14,6 +16,12 @@ var
 sdist
 develop-eggs
 .installed.cfg
+lib
+lib64
+__pycache__
+
+# C extensions
+*.so
 
 # Installer logs
 pip-log.txt
@@ -21,9 +29,12 @@ pip-log.txt
 # Unit test / coverage reports
 .coverage
 .tox
+nosetests.xml
 
 #Translations
 *.mo
 
 #Mr Developer
 .mr.developer.cfg
+.project
+.pydevproject
