--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,16 @@
-pyOpenSSL>=0.15.1
-dnspython>=1.12
-requests>=2.8.1
+beautifulsoup4>=4.4.1
 certifi>=2015.11.20.1
-beautifulsoup4>=4.3.2
+cffi>=1.3.1
+cryptography>=1.1.1
+dnspython>=1.12.0
+enum34>=1.1.1
 html5lib>=0.9999999
+idna>=2.0
+ipaddress>=1.0.15
+ndg-httpsclient>=0.4.0
 pyasn1>=0.1.9
 pyasn1-modules>=0.0.8
+pycparser>=2.14
+pyOpenSSL>=0.15.1
+requests>=2.8.1
+six>=1.10.0
