and immediately have to redo publish because of forgetting to fix checkDNS() call

--- a/kenkou_check.cfg.example
+++ b/kenkou_check.cfg.example
@@ -1,8 +1,8 @@
 { "web": { "url":  "https://example.poo",
            "dns":  { "domain": "bear.im",
                      "ip":     "127.0.0.1", 
-                     "ns":     [ "ns1.dnsimple.com", "ns2.dnsimple.com",
-                                 "ns3.dnsimple.com", "ns4.dnsimple.com" ]
+                     "nameservers": [ "ns1.dnsimple.com", "ns2.dnsimple.com",
+                                      "ns3.dnsimple.com", "ns4.dnsimple.com" ]
                    },
            "cert": "expired.badssl.com"
          }
